fixed the nav bar, the spacing on the sections, but still not done with the address

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,14 @@
+body  {
+  margin: 0;
+}
+
 .site-title {
   font-family: 'PT Sans Narrow', sans-serif;
   font-weight: bold;
   font-size: 1.5em;
   color: #323232;
   display: inline-block;
-
+  margin-left: 30px;
 }
 
 h2  {
@@ -12,8 +16,8 @@ h2  {
   font-weight: bold;
   font-size: 1.875em;
   color: #323232;
-  display: inline-block;
-
+  text-align: center;
+  margin: 0 0 45px 0;
 }
 
 h3  {
@@ -46,7 +50,7 @@ p  {
   font-family: 'PT Serif', serif;
   font-weight: bold;
   font-size: 1em;
-  color: #f26533 ;
+  color: #f26533;
 }
 
 .splash {
@@ -61,9 +65,7 @@ nav  {
 
 
 ul  {
-  display: inline-block;
-  width: 50%;
-
+  float: right;
 }
 
 .links {
@@ -79,12 +81,11 @@ ul  {
   list-style: none;
   display: inline-block;
   padding-left: 10px;
-  padding-right: 10px;
+  padding-right: 30px;
 }
 
 main {
-  margin-top: 80px;
-  margin-bottom: 80px;
+  margin: 80px 0 80px 0;
   max-width: 600px;
   min-width: 400px;
   margin-left:auto;
@@ -92,8 +93,7 @@ main {
 }
 
 aside {
-margin-top: 80px;
-margin-bottom: 80px;
+margin: 80px 0 80px 0;
 text-align: center;
 }
 
@@ -120,7 +120,7 @@ text-align: left;
 
   .contact {
     background-color: #eeeeee;
-    margin: 0;
+    margin-top: 80px;
     padding: 80px 0 80px 0;
     width: 100%;
     text-align: center;
@@ -149,7 +149,7 @@ text-align: left;
   footer {
     background-color: #00897f;
     height: 125px;
-    margin 0;
+    margin: 0;
     width: 100%;
   }
 
